WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233739
Scrolling complex websites can stutter: scrolling thread frame can fail to process wheel events
https://bugs.webkit.org/show_bug.cgi?id=233739
Summary
Scrolling complex websites can stutter: scrolling thread frame can fail to pr...
Simon Fraser (smfr)
Reported
2021-12-01 17:27:58 PST
Scrolling complex websites can stutter (part 2)
Attachments
Patch
(3.22 KB, patch)
2021-12-01 17:31 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(3.24 KB, patch)
2021-12-01 17:32 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-12-01 17:31:05 PST
Created
attachment 445645
[details]
Patch
Simon Fraser (smfr)
Comment 2
2021-12-01 17:32:05 PST
Created
attachment 445646
[details]
Patch
Simon Fraser (smfr)
Comment 3
2021-12-01 17:32:30 PST
rdar://85946176
Simon Fraser (smfr)
Comment 4
2021-12-01 20:59:50 PST
https://trac.webkit.org/changeset/286411/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug